Fix Fonts and Spacing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,9 +3,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Text:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css");
-*{
-    font-family: 'Inter', sans-serif;
+* {
+  font-family: "Inter", sans-serif;
 }
+
 .custom-display-text {
   font-family: "Red Hat Display";
 }
@@ -23,7 +24,6 @@ ul li a {
   padding: 0 15px;
   color: black;
   text-decoration: none;
-  letter-spacing: 0.5px;
   transition: 0.2s;
 }
 
@@ -51,7 +51,7 @@ ul li a:hover::after {
 }
 
 #loader {
-  background: white url(../../public/Images/loading1.gif) no-repeat center center;
+  background: white url(../Images/loading1.gif) no-repeat center center;
   width: 100vw;
   height: 100vh;
   z-index: 100;
